crucible-macros/tests/ui/fail-on-enum.stderr
error: #[fixture] can only be applied to structs
 --> tests/ui/fail-on-enum.rs:5:10
  |
5 | pub enum MyFixture {
  |          ^^^^^^^^^
